two more pages added

--- a/recipes/Berger.html
+++ b/recipes/Berger.html
@@ -14,15 +14,18 @@
             style="color:lightsalmon; text-decoration: none; float:right ; padding-right: 20px;">Home</a>
     </nav>
 
-    <!--First recipes-->
+    
 
-    <div id="fish">
-        <h1 style="color:lightsalmon; text-align: center;">Fish Recipes</h1>
-        <img src="/assits/img/salmon-518032_1280.jpg" alt="Salmon" style="  max-width: 100%;
-    max-height:700px;  border-radius:12px; display: block; margin:auto; padding-top:50px; ">
+    <!--second recipes -->
 
-        <h2 style="color:lightsalmon;  margin-top: 50px;">Description</h2>
-        <p style=" color: darkblue; font-family:Verdana, Geneva, Tahoma, sans-serif;">
+    <div id="berger">
+
+        <h1 style="color:lightsalmon; text-align: center;">Berger Recipes</h1>
+        <img src="/assits/img/hamburger-494706_1280.jpg" alt="Salmon" style="  max-width: 100%;
+    max-height:700px;  border-radius:12px; display: block; margin:auto; padding-top:20px; ">
+
+        <h2 style="color:lightsalmon; text-align: center; margin-top: 50px;">Description</h2>
+        <p style=" margin: auto; color: darkblue; font-family:Verdana, Geneva, Tahoma, sans-serif;">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores laborum ipsa sit exercitationem labore
             dignissimos! Eum ad eligendi laboriosam maxime ullam in excepturi id. Earum rerum accusantium laborum
             officiis
@@ -34,9 +37,9 @@
         </p>
 
 
-        <h2 style="color:lightsalmon; margin-top: 50px;">Ingredients</h2>
+        <h2 style="color:lightsalmon; text-align: center; margin-top: 50px;">Ingredients</h2>
 
-        <ul style="display: table; ">
+        <ul style="display: table; margin: auto;">
             <li style=" color:darkblue; ">
                 Chekin
             </li>
@@ -58,9 +61,9 @@
         </ul>
 
 
-        <h2 style="color:lightsalmon; margin-top: 50px;">Steps</h2>
+        <h2 style="color:lightsalmon; text-align: center; margin-top: 50px;">Steps</h2>
 
-        <ol style=" display: table;">
+        <ol style=" display: table; margin: auto;">
 
             <li style=" color:darkblue; ">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam numquam illum eius ea maxime
@@ -89,10 +92,9 @@
 
             </li>
         </ol>
-
     </div>
 
-    <!--end of first recipes-->
+    <!--end of second recipes-->
 
 
 </body>
