--- a/recipes/meal.html
+++ b/recipes/meal.html
@@ -14,14 +14,14 @@
             style="color:lightsalmon; text-decoration: none; float:right ; padding-right: 20px;">Home</a>
     </nav>
 
-    <!--First recipes-->
+    <!--third recipes-->
+    <div id="meal">
 
-    <div id="fish">
-        <h1 style="color:lightsalmon; text-align: center;">Fish Recipes</h1>
-        <img src="/assits/img/salmon-518032_1280.jpg" alt="Salmon" style="  max-width: 100%;
-    max-height:700px;  border-radius:12px; display: block; margin:auto; padding-top:50px; ">
+        <h1 style="color:lightsalmon; text-align: center;">Meal Recipes</h1>
+        <img src="/assits/img/food-712665_1280.jpg" alt="Salmon" style="  max-width: 100%;
+    max-height:700px;  border-radius:12px; display: block; margin:auto; padding-top:20px; ">
 
-        <h2 style="color:lightsalmon;  margin-top: 50px;">Description</h2>
+        <h2 style="color:lightsalmon; margin-top: 50px;">Description</h2>
         <p style=" color: darkblue; font-family:Verdana, Geneva, Tahoma, sans-serif;">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores laborum ipsa sit exercitationem labore
             dignissimos! Eum ad eligendi laboriosam maxime ullam in excepturi id. Earum rerum accusantium laborum
@@ -34,15 +34,15 @@
         </p>
 
 
-        <h2 style="color:lightsalmon; margin-top: 50px;">Ingredients</h2>
+        <h2 style="color:lightsalmon;  margin-top: 50px;">Ingredients</h2>
 
-        <ul style="display: table; ">
-            <li style=" color:darkblue; ">
+        <ul style="display: table;" >
+            <li style="color:darkblue;">
                 Chekin
             </li>
 
             <li style=" color:darkblue;">
-                Onion
+            Onion
             </li>
 
             <li style="color:darkblue;">
@@ -58,7 +58,7 @@
         </ul>
 
 
-        <h2 style="color:lightsalmon; margin-top: 50px;">Steps</h2>
+        <h2 style="color:lightsalmon;  margin-top: 50px;">Steps</h2>
 
         <ol style=" display: table;">
 
@@ -91,9 +91,7 @@
         </ol>
 
     </div>
-
-    <!--end of first recipes-->
-
+    <!--end of third recipes-->
 
 </body>
 
