--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             style="width:100px; height: 50px; margin-left: 46%; margin-top: 5%; border-radius: 8px; background-color: lightsalmon; border: none; color: darkblue;">Fish
             Recipes </button></a>
 
-    <a href="/recipes/fish.html" style=" text-decoration: none; padding-right: 20px;"><button
+    <a href="/recipes/Berger.html" style=" text-decoration: none; padding-right: 20px;"><button
             style="width:100px; height: 50px; margin-left: 46%; margin-top: 5%; border-radius: 8px; background-color: lightsalmon; border: none; color: darkblue;">Berger
             Recipes </button></a>
-    <a href="/recipes/fish.html" style=" text-decoration: none; padding-right: 20px;"><button
+    <a href="/recipes/meal.html" style=" text-decoration: none; padding-right: 20px;"><button
             style="width:100px; height: 50px; margin-left: 46%; margin-top: 5%; border-radius: 8px; background-color: lightsalmon; border: none; color: darkblue;">Meal
             Recipes </button></a>
 
