link issues solved

--- a/recipes/Berger.html
+++ b/recipes/Berger.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-    <link href="/index.html">
 </head>
 
 <body>
     <nav style="background-color:azure;">
-        <a href="/index.html"
+        <a href="../index.html"
             style="color:lightsalmon; text-decoration: none; float:right ; padding-right: 20px;">Home</a>
     </nav>
 
@@ -21,7 +20,7 @@
     <div id="berger">
 
         <h1 style="color:lightsalmon; text-align: center;">Berger Recipes</h1>
-        <img src="/assits/img/hamburger-494706_1280.jpg" alt="Salmon" style="  max-width: 100%;
+        <img src="../assits/img/hamburger-494706_1280.jpg" alt="Salmon" style="  max-width: 100%;
     max-height:700px;  border-radius:12px; display: block; margin:auto; padding-top:20px; ">
 
         <h2 style="color:lightsalmon; text-align: center; margin-top: 50px;">Description</h2>
